appId: com.sovranbitcoin
---
- assertVisible: 'Send Ecash'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-check-status-step_1'

- tapOn:
    id: 'more-button'
- assertVisible: 'Check Status'
- tapOn: 'Check Status'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-check-status-step_2'

- assertVisible: 'Transaction Pending'

- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-check-status-step_3'
