appId: com.sovranbitcoin
---
- assertVisible: 'Send Ecash'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-copy-step_1'

- tapOn: 'Copy'
- assertVisible: 'Token Copied'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-copy-step_2'
