appId: com.sovranbitcoin
---
- assertVisible: 'Send Ecash'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-share-step_1'

- tapOn: 'Share'
- assertVisible: 'Save Image'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-share-step_1'

- tapOn: 'Save Image'
