appId: com.sovranbitcoin
---
- assertVisible: 'Send Ecash'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-cancel-step_1'

- tapOn:
    id: 'more-button'
- assertVisible: 'Cancel Transaction'
- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-cancel-step_2'
- tapOn: 'Cancel Transaction'

- runFlow:
    file: ../../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/options/ecash-cancel-step_3'
