appId: com.sovranbitcoin
name: Send Ecash Without Note

---
- launchApp

# - startRecording:
#     path: './.maestro/send/ecash-note-skip-video'

- assertVisible: 'Send'

- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/ecash-note-skip-step_1'

- tapOn: 'Send'

- assertVisible: 'Select Amount'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/ecash-note-skip-step_2'
- tapOn: '1'
- tapOn: '0'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/ecash-note-skip-step_3'
- tapOn: 'Next'

- assertVisible: 'Add a note'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/ecash-note-skip-step_4'
- tapOn: 'Skip'

- assertVisible: 'Send Ecash'
- runFlow:
    file: ../helper/screenshot.yml
    env:
      SCREENSHOT_PATH: './.maestro/send/ecash-note-skip-step_5'

- runFlow:
    file: './options/ecash-copy.yml'

- runFlow:
    file: './options/ecash-share.yml'

- runFlow:
    file: './options/ecash-copy-as-emoji.yml'

- runFlow:
    file: './options/ecash-cancel.yml'
# - stopRecording
